fixed overflowing links in notes

--- a/orgapy/static/orgapy/css/orgapy.css
+++ b/orgapy/static/orgapy/css/orgapy.css
@@ -225,3 +225,7 @@ tr a i.icon {
     cursor: pointer;
     user-select: none;
 }
+
+.markdown a {
+    word-break: break-all;
+}
